<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".LogInActivity">

	<EditText
		android:id="@+id/editTextLogin"
		android:layout_width="300dp"
		android:layout_height="90dp"
		android:layout_marginBottom="25dp"
		android:hint="@string/login"
		android:inputType="textPersonName"
		android:textAlignment="center"
		android:textSize="30sp"
		app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<EditText
		android:id="@+id/editTextPassword"
		android:layout_width="300dp"
		android:layout_height="90dp"
		android:layout_marginBottom="50dp"
		android:hint="@string/password"
		android:inputType="textShortMessage|textPersonName|text|textPassword"
		android:textAlignment="center"
		android:textSize="30sp"
		app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<Button
		android:id="@+id/buttonSignUp"
		android:layout_width="162dp"
		android:layout_height="54dp"
		android:layout_marginBottom="25dp"
		android:text="@string/signUp"
		android:textAlignment="center"
		android:textSize="18sp"
		app:layout_constraintBottom_toTopOf="@+id/buttonLogIn"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<Button
		android:id="@+id/buttonLogIn"
		android:layout_width="162dp"
		android:layout_height="54dp"
		android:layout_marginBottom="100dp"
		android:text="@string/logIn"
		android:textAlignment="center"
		android:textSize="18sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>